spacing fixed between sections

--- a/resources/scss/app/home-banner/index.scss
+++ b/resources/scss/app/home-banner/index.scss
@@ -2,7 +2,7 @@
 // @use "../app/links.scss" as *;
 .home-banner {
     position: relative;
-    margin-top: -104px;
+    margin-top: -200px;
     img {
         width: 100%;
     }
@@ -33,6 +33,40 @@
         }
         a:hover:after {
             bottom: 10px;
+        }
+    }
+    @media (max-width: 768px) {
+        position: relative;
+        margin-top: -105px;
+        .banner-caption {
+            h2 {
+                font-family: "Khand", sans-serif;
+                @include font(title, 34, 48, medium);
+                padding-right: 10px;
+                padding-top: 30px;
+                text-align: center;
+            }
+            a {
+                position: relative;
+                color: map-get($colors, title);
+                text-decoration: none;
+                cursor: pointer;
+            }
+            a:after {
+                content: "";
+                position: absolute;
+                left: 2px;
+                width: 0%;
+                height: 10px;
+                bottom: 20px;
+                border-radius: 10px;
+
+                transition: all 0.4s ease;
+                z-index: -1;
+            }
+            a:hover:after {
+                bottom: 0px;
+            }
         }
     }
 }
