--- a/resources/scss/app/home-service/index.scss
+++ b/resources/scss/app/home-service/index.scss
@@ -1,12 +1,14 @@
 @use "../links.scss" as *;
-.service-section {
-    padding: 50px 0 50px;
+
+.container {
+    padding: 50px 0px 50px 0px;
 
     .title {
         position: relative;
         color: map-get($colors, title);
         text-decoration: none;
         cursor: pointer;
+        padding-bottom: 60px;
     }
     .title:after {
         content: "";
@@ -23,27 +25,33 @@
     .title:hover:after {
         width: 12%;
     }
+}
+.service-container {
+    padding: 0 30px 0;
 
-    .service-container {
-        padding: 22px 0 0;
-
-        .service-item {
-            .service-icon {
-                padding-bottom: 48px;
-                img {
-                    width: 100px;
-                    height: 100px;
-                    object-fit: contain;
-                }
+    .service-item {
+        .service-icon {
+            padding-bottom: 48px;
+            img {
+                width: 100px;
+                height: 100px;
+                object-fit: contain;
             }
-            h3 {
-                padding-bottom: 20px;
-                @include font(secondary, 22, 32, regular);
-            }
-            p {
-                @include font(primary, 16, 26, light);
-                padding-bottom: 42px;
-            }
+        }
+        h3 {
+            padding-bottom: 20px;
+            @include font(secondary, 22, 32, regular);
+        }
+        p {
+            @include font(primary, 16, 26, light);
+            // padding-bottom: 42px;
         }
     }
 }
+
+// .carousel {
+//     ol {
+//         li {
+//         }
+//     }
+// }
